examples/test/testpolicy11983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11983
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key27: value43
      key11: value40
      key9: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value45
      podSelector:
        matchLabels:
          key29: value22
          key26: value6
